<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Serenity Settings">

  <PreferenceCategory android:title="@string/preferred_filter">
    <ListPreference
        android:defaultValue="all"
        android:entries="@array/categoryListNames"
        android:entryValues="@array/categoryListValues"
        android:key="serenity_category_filter"
        android:summary="@string/categories_summary_preference_description"
        android:title="@string/select_the_starting_category_filter_"/>
    <ListPreference
        android:defaultValue="all"
        android:entries="@array/categoryListNamesSeries"
        android:entryValues="@array/categoryListValuesSeries"
        android:key="serenity_series_category_filter"
        android:summary="@string/categories_series_summary_preference_description"
        android:title="@string/series_select_the_starting_category_filter_"/>

  </PreferenceCategory>
  <PreferenceCategory android:title="@string/display_adjustements">
    <CheckBoxPreference
        android:key="overscan_compensation"
        android:summary="@string/overscan_adjustement_summary"
        android:title="@string/overscan_compensation"/>
    <Preference
        android:key="overscan_setup"
        android:title="@string/overscan_setup_title"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/android_tv_recommendations">
    <CheckBoxPreference
        android:key="androidtv_recommendation_ondeck"
        android:summary="@string/contribute_ondeck_movies_and_episodes"
        android:title="@string/androidtv_ondeck_recommendations"
        android:defaultValue="false"/>
  </PreferenceCategory>

  <PreferenceCategory android:title="@string/video_library">
    <!--  Reneable when Subtitle support is added back.
    <CheckBoxPreference
        android:key="automatic_subtitle_selection"
        android:summary="@string/subtitle_automatic_selection_summary"
        android:title="@string/automatically_select_subtitles_"/>
    <ListPreference
        android:key="preferred_subtitle_language"
        android:summary="@string/subtitle_language_selection_summary"
        android:title="@string/subtitle_language_preference"/>
-->
    <CheckBoxPreference
        android:key="series_layout_posters"
        android:summary="@string/prefer_poster_layout_for_series_"
        android:title="@string/series_poster_layout"/>
    <CheckBoxPreference
        android:key="series_layout_grid"
        android:summary="@string/tv_shows_will_be_displayed_in_a_grid_view_"
        android:title="@string/prefer_grid_view_for_series"/>
    <CheckBoxPreference
        android:key="movie_layout_grid"
        android:summary="@string/poster_grid_layout_for_movies_"
        android:title="@string/movie_grid_poster_layout"/>
    <!--
    <CheckBoxPreference
        android:key="episode_trailers"
        android:title="Enable Episode Previews"
        android:summary="When enabled the app will try and search YouTube for episode promos and previews. Disable if you are not finding relevant trailers from YouTube."
        android:defaultValue="false"/>
     -->
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/animations">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="animation_background_mainmenu_fadein"
        android:summary="@string/fade_in_the_main_menu_background_art_"
        android:title="@string/fade_in_main_menu_backround"/>
    <!--
    <CheckBoxPreference
        android:key="animation_background_fadein"
        android:summary="@string/movie_fadein_animation_summary"
        android:title="@string/fade_in_background_fan_art"/>
     -->
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/media_player_internal">
    <CheckBoxPreference
        android:key="plex_aspect_ratio"
        android:summary="@string/prefer_plex_media_server_s_aspect_ratio_"
        android:title="@string/plex_aspect_ratio"/>
<!--
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="internal_player_osd"
        android:summary="@string/internal_player_osd_summary"
        android:title="@string/on_screen_display"/>
-->
    <ListPreference
        android:defaultValue="5000"
        android:key="osd_display_time"
        android:summary="Sets the amount of time the On Screen Display stays shown before fadding away."
        android:title="On Screen Display Time"
        android:entries="@array/osd_display_time"
        android:entryValues="@array/osd_display_time_values"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/media_player_external">
    <CheckBoxPreference
        android:key="external_player"
        android:summary="@string/use_external_media_player_"
        android:title="@string/external_player"/>
    <CheckBoxPreference
        android:key="external_player_continuous_playback"
        android:summary="@string/enables_video_queue_support_for_external_players_"
        android:title="@string/enable_video_queue_for_external_players"/>

    <ListPreference
        android:defaultValue="default"
        android:key="serenity_external_player_filter"
        android:summary="@string/preferred_external_player_summary"
        android:title="@string/preferred_external_player"/>

  </PreferenceCategory>
<!--
  <PreferenceCategory android:title="@string/Controls">

    <ListPreference
        android:key="skip_forward_time"
        android:title="@string/skip_forward_time_title"
        android:summary="@string/skip_forward_time_summary"
        android:entries="@array/skipListNames"
        android:entryValues="@array/skipListValues"
        android:defaultValue="30000"/>
    <ListPreference
        android:key="skip_backward_time"
        android:title="@string/skip_backward_time_title"
        android:summary="@string/skip_backward_time_summary"
        android:entries="@array/skipListNames"
        android:entryValues="@array/skipListValues"
        android:defaultValue="10000"/>
    <ListPreference
        android:key="next_prev_behavior"
        android:title="@string/next_prev_behavior_title"
        android:summary="@string/next_prev_behavior_summary"
        android:entries="@array/nextPrevNames"
        android:entryValues="@array/nextPrevValues"
        android:defaultValue="queue"/>

  </PreferenceCategory>
  -->
  <PreferenceCategory android:title="@string/preference_remote_control">
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="remote_control_menu"
        android:summary="@string/remote_control_menu_summary"
        android:title="@string/enable_sliding_menu"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/prefs_advanced_options">
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="serenity_boot_startup"
        android:summary="@string/prefs_startup_boot_sum"
        android:title="@string/prefs_auto_start_after_boot"/>
    <CheckBoxPreference
        android:key="serenity_tv_mode"
        android:summary="The app is running on a device connected to a TV with a Remote or Game Controller."
        android:title="Android TV mode"/>
  </PreferenceCategory>

</PreferenceScreen>