<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.MaterialToolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/Widget.AppTheme.Toolbar.Transparent"
        android:id="@+id/toolbar"
        android:layout_height="45dp"
        android:layout_width="match_parent">

  <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingTop="@dimen/overscan_top_padding">

    <LinearLayout
            android:id="@+id/metaDataRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/textClock"
            android:orientation="horizontal">

      <TextView
              android:id="@+id/movieCategoryName"
              style="@android:style/TextAppearance.Holo.Medium"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:gravity="center_vertical|left"
              android:focusable="false"
              android:text="@string/category"
              />

      <Spinner
              android:id="@+id/categoryFilter"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dp"
              android:focusable="true"
              android:gravity="center_vertical|left"
              android:prompt="@string/movie_category_prompt"
              android:spinnerMode="dropdown"
              />

      <Spinner
              android:id="@+id/categoryFilter2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dp"
              android:focusable="true"
              android:gravity="center_vertical|left"
              android:prompt="@string/movie_category_prompt2"
              android:spinnerMode="dropdown"
              android:visibility="invisible"
              />

      <TextView
              android:id="@+id/subtitleFilter"
              style="@android:style/TextAppearance.Holo.Medium"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:gravity="center_vertical|left"
              android:focusable="false"
              android:text="Subtitle"
              android:visibility="gone"
              />

      <Spinner
              android:id="@+id/videoSubtitle"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="5dp"
              android:focusable="true"
              android:gravity="center_vertical|left"
              android:prompt="@string/movie_category_prompt2"
              android:spinnerMode="dropdown"
              android:visibility="gone"
              />


      <TextView
              android:id="@+id/movieActionBarPosterTitle"
              style="@android:style/TextAppearance.Holo.Medium"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:gravity="center_vertical|left"
              android:textStyle="bold"
              />

    </LinearLayout>

    <us.nineworlds.serenity.ui.views.TextClock
            android:id="@+id/textClock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="10dp"
            style="@android:style/TextAppearance.Holo.Medium"
            android:textColor="#F0F0F0"
            android:layout_alignParentEnd="true"/>

  </RelativeLayout>

</com.google.android.material.appbar.MaterialToolbar>
